noinst_LIBRARIES = libcpucycles.a
BUILT_SOURCES=cpucycles.c cpucycles.h
EXTRA_DIST=alpha.c alpha.h amd64cpuinfo.c amd64cpuinfo.h amd64tscfreq.c amd64tscfreq.h clockmonotonic.c clockmonotonic.h cpucycles.c cpucycles.h gettimeofday.c gettimeofday.h hppapstat.c hppapstat.h powerpcaix.c powerpcaix.h powerpclinux.c powerpclinux.h powerpcmacos.c powerpcmacos.h sparc32psrinfo.c sparc32psrinfo.h sparcpsrinfo.c sparcpsrinfo.h test.c x86cpuinfo.c x86cpuinfo.h x86tscfreq.c x86tscfreq.h do compile cpucycles.html

cpucycles.c cpucycles.h:
	sh do

libcpucycles_a_SOURCES=cpucycles.c cpucycles.h
